<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="@dimen/marg_tendp"
    android:background="@drawable/gobtnborder"
    android:elevation="@dimen/marg_fivedp"
    android:padding="@dimen/marg_fivedp"
    tools:context=".Profile.ChangePasswordActivity">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <AutoCompleteTextView
            android:id="@+id/old_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/old_pass"
            android:inputType="textPassword"
            android:maxLines="1"
            android:paddingRight="@dimen/padding_tendp"
            android:singleLine="true" />

    </android.support.design.widget.TextInputLayout>
 <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <AutoCompleteTextView
            android:id="@+id/new_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/new_pass"
            android:inputType="textPassword"
            android:maxLines="1"
            android:paddingRight="@dimen/padding_tendp"
            android:singleLine="true" />

    </android.support.design.widget.TextInputLayout>
<android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <AutoCompleteTextView
            android:id="@+id/confm_new_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/con_pass"
            android:inputType="textPassword"
            android:maxLines="1"
            android:paddingRight="@dimen/padding_tendp"
            android:singleLine="true" />

    </android.support.design.widget.TextInputLayout>
<Button
    android:id="@+id/change_pass"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/submit"
    android:layout_marginTop="@dimen/marg_fivedp"
    android:textColor="@color/White"
    android:background="@drawable/button_blue"/>
</LinearLayout>