<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_margin="@dimen/marg_fivedp"
    android:background="@drawable/rectangle"
    android:orientation="vertical"
    android:padding="@dimen/marg_fivedp">

    <LinearLayout
        android:id="@+id/parent_paihis_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/marg_threedp"
        android:weightSum="1">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:text="@string/str_hospital_name"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_hospital_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.7"
            android:text=""
            android:textSize="15sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/child_paihis_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/marg_threedp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical" >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="@dimen/marg_onedp"
                    android:weightSum="1">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.4"
                        android:text="@string/str_bank_info"
                        android:textSize="@dimen/txt_small"
                        android:visibility="visible" />

                    <TextView
                        android:id="@+id/tv_bank_info"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.6"
                        android:text=""
                        android:textSize="@dimen/txt_small" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="@dimen/marg_onedp"
                    android:weightSum="1">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.4"
                        android:text="@string/str_next_appo"
                        android:textSize="@dimen/txt_small"
                        android:visibility="visible" />

                    <TextView
                        android:id="@+id/tv_next_appo"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.6"
                        android:text=""
                        android:textSize="@dimen/txt_small" />
                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="@dimen/marg_onedp"
                    android:weightSum="1">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.4"
                        android:text="@string/str_remarks"
                        android:textSize="@dimen/txt_small"
                        android:visibility="visible" />

                    <TextView
                        android:id="@+id/tv_bank_remarks"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.6"
                        android:text=""
                        android:textSize="@dimen/txt_small" />
                </LinearLayout>
            </LinearLayout>

            <ImageView
                android:id="@+id/img_physician_doctor"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:visibility="invisible"
                android:src="@mipmap/ic_launcher" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/marg_onedp"
            android:weightSum="1">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.4"
                android:text="@string/str_actions"
                android:textSize="@dimen/txt_small"
                android:visibility="visible" />

            <TextView
                android:id="@+id/tv_delete"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.6"
                android:text=""
                android:textSize="@dimen/txt_small" />
            <ImageView
                android:layout_width="70dp"
                android:layout_height="20dp"
                android:visibility="invisible"
                android:src="@mipmap/ic_launcher" />
        </LinearLayout>


<!--
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/marg_onedp"
            android:orientation="horizontal"
            android:weightSum="1">

            <CheckBox
                android:id="@+id/check_delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/marg_threedp"
                android:visibility="gone" />

            <TextView
                android:id="@+id/tv_physician_edit"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginLeft="@dimen/marg_tendp"
                android:background="@drawable/ic_edit_black_24dp"
                android:textSize="@dimen/txt_small" />

            <TextView
                android:id="@+id/tv_physician_delete"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginLeft="@dimen/marg_twenty"
                android:visibility="gone"
                android:background="@drawable/ic_delete_black_24dp"
                android:textSize="@dimen/txt_small" />


        </LinearLayout>-->


    </LinearLayout>


</LinearLayout>